trunk/Archive2/ff/a461eaeeafc670/output
main.cpp:1:1: error: 'fib' does not name a type
 fib 1 = 1
 ^
